<resources>
    <string name="app_name">Contacts</string>
    <string name="continue_txt">CONTINUE</string>
    <string name="save_txt">SAVE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    //* Login *//
    <string name="login">Login</string>
    <string name="not_registered_signup_here">Not registered? Signup Here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_password">Enter new password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="login_welcome">Welcome!</string>

    //* Signup *//
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_hey_there">Hey there,</string>
    <string name="signup_create_an_account">Create an Account</string>

    //* Contacts *//
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="gender_field">Gender:</string>
    <string name="phone_field">Phone:</string>
    <string name="email_field">Email:</string>
    <string name="added_date_field">Added at:</string>
    <string name="add">add</string>
    <string name="new_contact">New Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>

    //* Add Contact *//
    <string name="add_contact">Add Contact</string>

    //* Settings *//
    <string name="settings">Settings</string>
    <string name="settings_date">Added Date</string>
    <string name="choose_contact_info">Choose what contact information to see in the list:</string>
    <string name="by_field">By:</string>
    <string name="text_rb_choice">Text</string>
    <string name="color_rb_choice">Color</string>

    //* Contact Info *//
    <string name="contact_info">Contact Info</string>
    <string name="first_name_field">First Name:</string>
    <string name="last_name_field">Last Name:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>