<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.contactsapp.ui.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_loginFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.contactsapp.ui.fragments.SignupFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.contactsapp.ui.fragments.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts">
        <action
            android:id="@+id/action_contactsFragment_to_addContactFragment"
            app:destination="@id/addContactFragment" />
        <action
            android:id="@+id/action_contactsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_contactsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.example.contactsapp.ui.fragments.AddContactFragment"
        android:label="@string/add_contact"
        tools:layout="@layout/fragment_add_contact">
        <action
            android:id="@+id/action_addContactFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.contactsapp.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
    </fragment>

</navigation>