<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_back"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_contact_info"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lastName_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/last_name"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/gender_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/gender"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <RadioGroup
                android:id="@+id/gender_by_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/by_field"/>

                <RadioButton
                    android:id="@+id/text_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/text_rb_choice" />

                <RadioButton
                    android:id="@+id/color_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/color_rb_choice" />
            </RadioGroup>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/phone_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/phone"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/email_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                style="?android:attr/progressBarStyle"/>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save_txt"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
