<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_back"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_login_person"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_login_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:autofillHints="" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                style="?android:attr/progressBarStyle"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/continue_txt"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="8dp"
        android:text="@string/not_registered_signup_here"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="20dp"/>

</LinearLayout>