<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_back"
    tools:context=".ui.fragments.AddContactFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_contact"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_login_person"
                android:drawablePadding="8dp"
                android:hint="@string/first_name"
                android:padding="8dp"
                style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:maxLength="15"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_login_person"
                android:drawablePadding="8dp"
                android:hint="@string/last_name"
                android:padding="8dp"
                style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:maxLength="15"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:padding="8dp"
                style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:maxLength="10"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:maxLength="40"
                android:inputType="textEmailAddress" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                style="?android:attr/progressBarStyle"/>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save_txt"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
