<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_back"
    tools:context=".ui.fragments.ContactInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="24dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_first_Name_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <TextView
                android:id="@+id/tv_last_name_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c_info_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_gender_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/gender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_phone_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_email_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:hint="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edit_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="24dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_delete"
                android:layout_marginEnd="40dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                android:background="@drawable/custom_edit_text"
                android:contentDescription="@string/delete" />
            <ImageButton
                android:id="@+id/edit_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_edit"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                android:background="@drawable/custom_edit_text"
                android:contentDescription="@string/edit" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
